--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="fwee short for Free World Exchange (fwee) is an online social media marketplace
+       where all transactions are made using a time-backed social token digital virtual currency. All
+       items are essentially fwee and the currency is simply used as a means of exchange for items in
+       the marketplace. It's a FWEE World!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
