--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,7 +34,7 @@
     <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <title>Free World Exchange</title>
+    <title>fwee | Free World Exchange Experience</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
